new proj/src/objects/GE_ES_Project__c.object
<CustomObject>
    <description>Describes the Project for which Opportunities can be related to.</description>
    <fields>
        <fullName>Disposition_Reason__c</fullName>
        <label>Disposition Reason</label>
        <picklist>
            <controllingField>Stage__c</controllingField>
            <picklistValues>
                <fullName>Uniqueness: Definition ( Sole Provider / Technology)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Value: Definition (Past performance, etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Best Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE No Bid - Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE No Bid - Terms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account_Name__c</fullName>
        <formula>GE_ES_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account_Region__c</fullName>
        <formula>GE_ES_Account__r.GE_ES_Sales_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The customer legal entity that will be issuing the purchase order.</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Corporate_Account__c</fullName>
        <label>Corporate Account</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADNOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aramco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conoco-Philips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exxon-Mobil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA AND BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRITISH INDIAN OCEAN TERRITORY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_EPC_Contractor__c</fullName>
        <inlineHelpText>Manually enter the EPC contractor if one has been identified</inlineHelpText>
        <label>EPC Contractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_End_User_Country__c</fullName>
        <formula>Text(GE_ES_Account__r.GE_HQ_New_Account_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects (End User)</relationshipLabel>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Engagement_Status__c</fullName>
        <label>Engagement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Global Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS Corporate Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS Field Application Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Equip_Model__c</fullName>
        <formula>Installed_Base__r.GE_ES_Equip_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equip. Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_FEED_Contractor__c</fullName>
        <inlineHelpText>Manually enter the front-end engineering design contractor if one has been identified</inlineHelpText>
        <label>FEED  Contractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Full_Name__c</fullName>
        <formula>CreatedBy.FirstName &amp; &apos; &apos; &amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Functional_Requirement__c</fullName>
        <label>Functional Requirement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Functional_Status__c</fullName>
        <label>Functional Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked Down</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Industry__c</fullName>
        <formula>GE_ES_Account__r.GE_ES_Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_InstallBaseName__c</fullName>
        <formula>Installed_Base__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InstallBaseName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Installed_Base_SN__c</fullName>
        <formula>Installed_Base__r.GE_ES_GE_S_N__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GE S/N</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Lead_P_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>P&amp;L values -  CS, DE (T&amp;D), EnvSvc (EE), IS, MCS (OC), Motors, PS</inlineHelpText>
        <label>Lead P&amp;L</label>
        <referenceTo>GE_ES_PL__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Outage_End_Date__c</fullName>
        <label>Outage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Outage_Start_Date__c</fullName>
        <label>Outage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Outage_Status__c</fullName>
        <label>Outage Status</label>
        <picklist>
            <picklistValues>
                <fullName>Forecasted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Owner__c</fullName>
        <formula>Installed_Base__r.GE_ES_Account_Manager__r.FirstName  &amp; &apos; &apos;&amp; Installed_Base__r.GE_ES_Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IB Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Potential_PO_value__c</fullName>
        <label>Potential PO value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Procurement_Path__c</fullName>
        <label>Procurement Path</label>
        <picklist>
            <picklistValues>
                <fullName>Not yet determined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCS Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exploration Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil Company Exploration Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Products__c</fullName>
        <label>End User Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Project_Capital_Budget__c</fullName>
        <inlineHelpText>Enter estimated capital budget for the complete project</inlineHelpText>
        <label>Project Capital Budget (US$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Project_Details__c</fullName>
        <description>Additional information around scope, schedule, competition, etc.</description>
        <inlineHelpText>Additional information around scope, schedule, competition, etc.</inlineHelpText>
        <label>Project Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Project_ID2__c</fullName>
        <displayFormat>P-{00000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>GE_ES_Project_ID__c</fullName>
        <label>Project ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Project_Location__c</fullName>
        <label>Project Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Project_Management_Contractor__c</fullName>
        <inlineHelpText>Manually enter the PMC if one has been identified</inlineHelpText>
        <label>Project Management Contractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Flow Gas Moisture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Flow gas moisture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Flow gas moisture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAE Strategic Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAM Strategic Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China export</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Project__c</fullName>
        <label>Project</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts &amp; Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB, Entitlement &amp; SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oppty Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC/BMI Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog/Quoting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundational Setups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DWH Integrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIB Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDM Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Release__c</fullName>
        <label>Release</label>
        <picklist>
            <picklistValues>
                <fullName>Dilbert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eeyore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sales_funnel_position__c</fullName>
        <label>Sales funnel position</label>
        <picklist>
            <picklistValues>
                <fullName>Universe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Few</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Scheduled_start_up_date__c</fullName>
        <label>Scheduled start-up date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Station_Name__c</fullName>
        <formula>GE_ES_Account__r.GE_HQ_Station_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sub_P_L__c</fullName>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <controllingField>GE_ES_Tier_2_P_L__c</controllingField>
            <picklistValues>
                <fullName>Gasification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation &amp; Lifecycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outage Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations &amp; Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Plant Optimization (TPO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Recovery Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waukesha Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jenbacher Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals &amp; Monitoring Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineered Systems (WES)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Water Solutions (IWS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS Electrical Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prolec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Technology__c</fullName>
        <formula>TEXT(Installed_Base__r.GE_ES_Technology__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Tier_1_P_L__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Management (EM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power &amp; Water (P&amp;W)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Tier_2_P_L__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Gen Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Hitachi Nuclear Energy (GEH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Solutions (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converteam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>BI- Boroscope Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combustion Inspection (CI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Gas Path Inspection (HGPI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Overhaul (MO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flange to Flange Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Expenditure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Expenditure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Outage</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Type_of_Project__c</fullName>
        <label>Type of Project</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Expenditure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Expenditure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Use_Case__c</fullName>
        <label>Use Case</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Acct_Duns__c</fullName>
        <formula>GE_ES_Account__r.GE_HQ_DUNS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Duns</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Acct_Global_Duns__c</fullName>
        <description>GE Global Duns from related Account; for use in reporting.</description>
        <formula>GE_ES_Account__r.GE_HQ_GE_Global_Duns__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Global Duns</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Acct_Global_Ind__c</fullName>
        <formula>GE_ES_Account__r.GE_HQ_GE_Vertical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Global Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Capacity__c</fullName>
        <label>Capacity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Deal_Structure__c</fullName>
        <label>Deal Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Single P&amp;L or bundle of equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated equipment solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated turnkey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Energy_HQ_Region__c</fullName>
        <label>Energy HQ Region</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Europe, Russia/CIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Africa/Turkey/Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Saharan Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S.-North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S.-South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S.-West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Expected_Order_Date__c</fullName>
        <label>Expected Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_GE_is_approved_Vendor__c</fullName>
        <label>GE is approved Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Master_T_C_s_agreement__c</fullName>
        <label>Master T&amp;C&apos;s agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_New_Cap_Type__c</fullName>
        <label>New Capacity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brownfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenfield</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>